# loko

./: .dockerignore  .gitattributes  .gitignore  AMELIORATION_R0_R1_LOKO.md  AUDIT_REMEDIATION_LOKO_BOT.md  CAMPAGNE_V0_3_7_KICKOFF.md  DEPLOIEMENT.md  Dockerfile  FEUILLE_DE_ROUTE_PRODUIT_FINAL_LOKO.md  FEUILLE_DE_ROUTE_VALIDATION_FINALE_R0_R1_LOKO.md  MISSION_CLAUDE_CODE_CAMPAGNE.md  PLAN_CORRECTION_R0_R1_LOKO.md  PLAN_CORRECTION_V0_3_4_LOKO.md  PLAN_CORRECTION_V0_3_5_LOKO.md  PLAN_CORRECTION_V0_3_6_LOKO.md  PLAN_EXECUTION_GLOBAL_R0_R1.md  POSTULAT_TEST_E2E_LOKO.md  PROTOCOLE_PARCOURS_PRODUIT_PROD_LOKO.md  PROTOCOLE_VALIDATION_R0_R1_LOKO.md  PROTOCOLE_VALIDATION_R0_R1_LOKO_V2.md  RAPPORT_AUDIT_SECURITE_E6.md  RAPPORT_E1_DIAGNOSTIC_COMPLET.md  RAPPORT_O6_ORCHESTRATOR_REFACTOR.md  RAPPORT_TEST_E2E_LOKO.md  RAPPORT_VAGUE_3_E8.md  RAPPORT_VALIDATION_R0_R1_LOKO.md  RAPPORT_VALIDATION_R0_R1_LOKO_V2.md  RECOMMANDATIONS_LOKO_PROD.md  SPECS_DEV_LOKO_BOT.md  SPEC_EVOLUTIONS_V2_LOKO.md  W2_GUIDE_EXECUTION.md  W2_hypothese_actee.md  constraints-ml.txt  docker-compose.prod.yml  docker-compose.secrets.yml  docker-compose.yml  openapi_w2.json  pyproject.toml  specs-loko-bot-service-client.md
.github/workflows/: ci.yml  deploy.yml  maintenance.yml
desktop/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
desktop/src/: App.tsx  i18n.ts  index.css
docs/: ALERTING_O4.md  API_DOCUMENTATION_C3.md  AUDIT_LOGGING_INTEGRATION.md  DEPLOYMENT.md  K4_RATE_LIMITING_COMPOSITE.md  PROMETHEUS_METRICS.md
eval/datasets/: HASHES.sha256  enrichment_w42.csv  enrichment_w43.csv  enrichment_w43b.csv  enrichment_w43c.csv  enrichment_w43d.csv  enrichment_w43e.csv  enrichment_w43f.csv  enrichment_w43g.csv  enrichment_w43h.csv  enrichment_w43i.csv  heldout_conseiller.csv  heldout_horsscope.csv  heldout_metier.csv  pieges.csv  train.csv  train_enriched_v038.csv  train_enriched_v039.csv  train_enriched_v039b.csv  train_enriched_v039c.csv  train_enriched_v039d.csv  train_enriched_v039e.csv  train_enriched_v039f.csv  train_enriched_v039g.csv  train_enriched_v039h.csv  train_enriched_v039i.csv
eval/enrichment/: enrichment_v3_7_iter1.csv
eval/mission-obs/: 00_LOT0_AUDIT_WEZON.md
eval/remediation-v1.3.3/: 00_RAPPORT_REMEDIATION.md
eval/w4-pattern-analysis/: enrichment_priorities.json  error_patterns.json  pattern_analysis_summary.md
loko/: __init__.py  email.py  main.py
loko/analytics/: db.py  emitter.py  observer.py  queries.py  schema.py
loko/api/: analytics_dashboard.py  api_keys.py  audit_middleware.py  auth.py  bot_admin.py  bot_dashboard.py  bot_public.py  csp_middleware.py  csrf.py  health_detailed.py  metrics_endpoint.py  ops.py  quotas.py  rate_limit.py  session_middleware.py  user_auth.py
loko/assistant/: __init__.py  llm_client.py  prompts.py  proposals.py  quota.py  router.py  service.py
loko/bot/: __init__.py  alerting.py  config_store.py  decision.py  engine.py  errors.py  escalation.py  generation.py  guardrails.py  knowledge_store.py  maintenance.py  metrics.py  models.py  orchestrator.py  pii.py  quota_usage.py  retrieval_filter.py  session_store.py  states.py  templates.py  timeout.py  tracing.py  versioning.py
loko/config/: env.py  secrets.py
loko/connectors/: __init__.py  faq_web_crawler.py  playwright_fetcher.py
loko/db/: accounts.py  audit.py
loko/eval/: __init__.py  cli.py  decision.py  runner.py
loko/monitoring/: metrics.py
loko/security/: __init__.py  secret_store.py  ssrf.py
loko/testing/: __init__.py  mocks.py
monitoring/: alertmanager.yml  alerts.yml  prometheus.yml
tests/: conftest.py  e2e_intents.json  test_api_key_rotation.py  test_assistant.py  test_audit.py  test_campaign_tools.py  test_datasets.py  test_e2e_protocol.py  test_interrupt.py  test_no_client_mention.py  test_no_mgen_mention.py  test_repo_hygiene.py  test_secrets.py  test_v_corrections.py
tests/analytics/: test_analytics_dashboard.py  test_db.py  test_emitter.py  test_observer.py  test_queries.py  test_schema.py
tests/bot/: conftest.py  test_advice.py  (+37 more)
tools/: audit_constants.py  audit_label_mapping.py  backup_loko.sh  campaign_container.py  check_bot_conformity.py  check_version_sync.py  clone_bot.py  deploy_version.sh  diag_image.sh  diff_refigeage.py  generate_enrichment_examples.py  make_datasets.py  measure_image.sh  migrate_accounts.py  preflight.py  prepare_campagne_poste.ps1  restore_loko.sh  rollback_loko.sh  run_brindille_pc_playwright.py  run_campaign.py  run_mission2_poste.ps1  setup_backup_cron.sh  setup_campaign_bot.py  setup_secrets.sh  synthesize_error_patterns.py  train_bot_offline.py  w2_contre_epreuve.sh
widget/: loko-widget.js
(+214 files in other folders)
