[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "loko"
version = "1.3.4"
description = "LOKO — deterministic chatbot platform for customer service"
license = {text = "Proprietary"}
requires-python = ">=3.10"
dependencies = ["pydantic>=2.0"]

[project.optional-dependencies]
server = [
    "fastapi>=0.100,<1",
    "uvicorn>=0.20,<1",
    "slowapi>=0.1,<1",
    "python-dotenv>=1.0,<2",
    "httpx>=0.25,<1",
    "argon2-cffi>=23.1,<24",
    "cryptography>=41.0,<44",
    "prometheus_client>=0.20,<1",
]
ml = [
    "setfit>=1.1.3,<1.2",
    "transformers>=4.45,<5",
    "sentence-transformers>=3.0,<4",
]
crawler = [
    "playwright>=1.40,<2",
    "beautifulsoup4>=4.12,<5",
    "lxml>=5.0,<6",
]
dev = [
    "pytest>=7.0,<9",
    "pytest-asyncio>=0.21,<1",
    "pytest-cov>=4.1,<6",
    "ruff>=0.4,<1",
]

[project.scripts]
loko-eval = "loko.eval.cli:main"

[tool.setuptools.packages.find]
include = ["loko*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff.lint]
ignore = [
    "E741",   # ambiguous variable name (l in list comprehensions)
    "E402",   # module-level import not at top (needed for sys.path manipulation)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841", "E721"]   # unused vars in test fixtures, type() comparisons
"tools/*" = ["F841"]           # unused vars in CLI scripts

# C2: Coverage — run explicitly with:
#   pytest --cov=loko --cov-report=term-missing --cov-report=html:htmlcov --cov-report=xml:coverage.xml
# Not in addopts because CI guard jobs install pytest without pytest-cov.
